8268019: C2: assert(no_dead_loop) failed: dead loop detected